Add mapFn option to instrumentation test helper to normalize dynamic multipart boundaries in images tests.

--- a/src/cloudflare/internal/test/images/BUILD.bazel
+++ b/src/cloudflare/internal/test/images/BUILD.bazel
@@ -3,5 +3,5 @@ load("//:build/wd_test.bzl", "wd_test")
 wd_test(
     src = "images-api-test.wd-test",
     args = ["--experimental"],
-    data = glob(["*.js"]),
+    data = glob(["*.js"]) + ["//src/cloudflare/internal/test:instrumentation-test-helper.js"],
 )
