--- a/src/cloudflare/internal/test/BUILD.bazel
+++ b/src/cloudflare/internal/test/BUILD.bazel
@@ -2,6 +2,7 @@ exports_files(
     ["instrumentation-test-helper.js"],
     visibility = [
         "//src/cloudflare/internal/test/d1:__pkg__",
+        "//src/cloudflare/internal/test/images:__pkg__",
         "//src/cloudflare/internal/test/tracing:__pkg__",
         "//src/workerd/api:__pkg__",
     ],
