Add instrumentation test in prep for adding attributes

--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -516,7 +516,10 @@ wd_test(
 wd_test(
     src = "sync-kv-test.wd-test",
     args = ["--experimental"],
-    data = ["sync-kv-test.js"],
+    data = [
+        "sync-kv-instrumentation-test.js",
+        "sync-kv-test.js",
+    ],
 )
 
 wd_test(
