Python: Add compat flag to allow using external Python sdk

--- a/src/workerd/server/tests/python/vendor_pkg_tests/BUILD
+++ b/src/workerd/server/tests/python/vendor_pkg_tests/BUILD
@@ -3,3 +3,7 @@ load(":vendor_test.bzl", "vendored_py_wd_test")
 vendored_py_wd_test("fastapi")
 
 vendored_py_wd_test("beautifulsoup4")
+
+vendored_py_wd_test(
+    "python-workers-runtime-sdk",
+)
