--- a/src/workerd/io/BUILD.bazel
+++ b/src/workerd/io/BUILD.bazel
@@ -121,6 +121,7 @@ wd_cc_library(
         "//src/workerd/util:checked-queue",
         "//src/workerd/util:completion-membrane",
         "//src/workerd/util:exception",
+        "//src/workerd/util:ring-buffer",
         "//src/workerd/util:sqlite",
         "//src/workerd/util:strong-bool",
         "//src/workerd/util:thread-scopes",
