Python: Disable vendor tests on windows
And enable on 0.28.2

--- a/src/workerd/server/tests/python/vendor_pkg_tests/BUILD
+++ b/src/workerd/server/tests/python/vendor_pkg_tests/BUILD
@@ -1,11 +1,5 @@
 load(":vendor_test.bzl", "vendored_py_wd_test")
 
-vendored_py_wd_test(
-    "fastapi",
-    skip_python_flags = ["0.28.2"],
-)
+vendored_py_wd_test("fastapi")
 
-vendored_py_wd_test(
-    "beautifulsoup4",
-    skip_python_flags = ["0.28.2"],
-)
+vendored_py_wd_test("beautifulsoup4")
