Add tracing infrastructure for bindings
Co-authored-by: Jeremy Morrell (Cloudflare) <jmorrell@cloudflare.com>
Co-authored-by: Zeb Piasecki <zeb@cloudflare.com>
Co-authored-by: Maksym Makuch <maksymm@protonmail.com>

--- a/src/cloudflare/internal/test/tracing/BUILD.bazel
+++ b/src/cloudflare/internal/test/tracing/BUILD.bazel
@@ -1,7 +1,7 @@
 load("//:build/wd_test.bzl", "wd_test")
 
 wd_test(
-    src = "images-api-test.wd-test",
+    src = "tracing-helpers-test.wd-test",
     args = ["--experimental"],
     data = glob(["*.js"]) + ["//src/cloudflare/internal/test:instrumentation-test-helper.js"],
 )
