add text encoder benchmarks

--- a/src/workerd/tests/BUILD.bazel
+++ b/src/workerd/tests/BUILD.bazel
@@ -90,6 +90,12 @@ wd_cc_benchmark(
     ],
 )
 
+wd_cc_benchmark(
+    name = "bench-text-encoder",
+    srcs = ["bench-text-encoder.c++"],
+    deps = [":test-fixture"],
+)
+
 wd_test(
     src = "unknown-import-assertions-test.wd-test",
     args = ["--experimental"],
@@ -119,6 +125,7 @@ filegroup(
         ":bench-kj-headers",
         ":bench-mimetype",
         ":bench-regex",
+        ":bench-text-encoder",
         ":bench-util",
     ],
     visibility = ["//visibility:public"],
