--- a/src/workerd/io/BUILD.bazel
+++ b/src/workerd/io/BUILD.bazel
@@ -122,6 +122,7 @@ wd_cc_library(
         "//src/workerd/util:completion-membrane",
         "//src/workerd/util:exception",
         "//src/workerd/util:ring-buffer",
+        "//src/workerd/util:small-set",
         "//src/workerd/util:sqlite",
         "//src/workerd/util:strong-bool",
         "//src/workerd/util:thread-scopes",
