--- a/src/workerd/server/tests/python/vendor_pkg_tests/BUILD
+++ b/src/workerd/server/tests/python/vendor_pkg_tests/BUILD
@@ -1,4 +1,7 @@
+load("//src/workerd/server/tests/python:py_wd_test.bzl", "python_test_setup")
 load(":vendor_test.bzl", "vendored_py_wd_test")
+
+python_test_setup()
 
 vendored_py_wd_test("fastapi")
 
