--- a/deps/rust/crates/BUILD.clap-4.5.50.bazel
+++ b/deps/rust/crates/BUILD.clap-4.5.50.bazel
@@ -6,13 +6,16 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
-load("@rules_rust//rust:defs.bzl", "rust_library")
+load(
+    "@rules_rust//rust:defs.bzl",
+    "rust_binary",
+    "rust_library",
+)
 
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "selectors",
+    name = "clap",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,36 +32,34 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_root = "lib.rs",
+    crate_features = [
+        "derive",
+        "help",
+        "std",
+    ],
+    crate_root = "src/lib.rs",
     edition = "2021",
+    proc_macro_deps = [
+        "@crates_vendor__clap_derive-4.5.49//:clap_derive",
+    ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=selectors",
+        "crate-name=clap",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.30.0",
+    version = "4.5.50",
     deps = [
-        "@crates_vendor__bitflags-2.9.4//:bitflags",
-        "@crates_vendor__cssparser-0.35.0//:cssparser",
-        "@crates_vendor__derive_more-2.0.1//:derive_more",
-        "@crates_vendor__fxhash-0.2.1//:fxhash",
-        "@crates_vendor__log-0.4.28//:log",
-        "@crates_vendor__new_debug_unreachable-1.0.6//:debug_unreachable",
-        "@crates_vendor__phf-0.11.3//:phf",
-        "@crates_vendor__precomputed-hash-0.1.1//:precomputed_hash",
-        "@crates_vendor__selectors-0.30.0//:build_script_build",
-        "@crates_vendor__servo_arc-0.4.1//:servo_arc",
-        "@crates_vendor__smallvec-1.15.1//:smallvec",
+        "@crates_vendor__clap_builder-4.5.50//:clap_builder",
     ],
 )
 
-cargo_build_script(
-    name = "_bs",
+rust_binary(
+    name = "stdio-fixture__bin",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -68,7 +69,6 @@ cargo_build_script(
         allow_empty = True,
         exclude = [
             "**/* *",
-            "**/*.rs",
             ".tmp_git_root/**/*",
             "BUILD",
             "BUILD.bazel",
@@ -76,41 +76,29 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_name = "build_script_build",
-    crate_root = "build.rs",
-    data = glob(
-        include = ["**"],
-        allow_empty = True,
-        exclude = [
-            "**/* *",
-            ".tmp_git_root/**/*",
-            "BUILD",
-            "BUILD.bazel",
-            "WORKSPACE",
-            "WORKSPACE.bazel",
-        ],
-    ),
+    crate_features = [
+        "derive",
+        "help",
+        "std",
+    ],
+    crate_root = "src/bin/stdio-fixture.rs",
     edition = "2021",
-    pkg_name = "selectors",
+    proc_macro_deps = [
+        "@crates_vendor__clap_derive-4.5.49//:clap_derive",
+    ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=selectors",
+        "crate-name=clap",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.30.0",
-    visibility = ["//visibility:private"],
+    version = "4.5.50",
     deps = [
-        "@crates_vendor__phf_codegen-0.11.3//:phf_codegen",
+        ":clap",
+        "@crates_vendor__clap_builder-4.5.50//:clap_builder",
     ],
-)
-
-alias(
-    name = "build_script_build",
-    actual = ":_bs",
-    tags = ["manual"],
 )
