--- a/deps/rust/crates/BUILD.clap_builder-4.5.50.bazel
+++ b/deps/rust/crates/BUILD.clap_builder-4.5.50.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "lol_html",
+    name = "clap_builder",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,6 +28,10 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "help",
+        "std",
+    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -35,22 +39,14 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=lol_html",
+        "crate-name=clap_builder",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "2.6.0",
+    version = "4.5.50",
     deps = [
-        "@crates_vendor__bitflags-2.9.4//:bitflags",
-        "@crates_vendor__cfg-if-1.0.4//:cfg_if",
-        "@crates_vendor__cssparser-0.35.0//:cssparser",
-        "@crates_vendor__encoding_rs-0.8.35//:encoding_rs",
-        "@crates_vendor__hashbrown-0.15.5//:hashbrown",
-        "@crates_vendor__memchr-2.7.6//:memchr",
-        "@crates_vendor__mime-0.3.17//:mime",
-        "@crates_vendor__precomputed-hash-0.1.1//:precomputed_hash",
-        "@crates_vendor__selectors-0.30.0//:selectors",
-        "@crates_vendor__thiserror-2.0.17//:thiserror",
+        "@crates_vendor__anstyle-1.0.13//:anstyle",
+        "@crates_vendor__clap_lex-0.7.6//:clap_lex",
     ],
 )
