Implements shapely vendored test for Python Workers

--- a/src/workerd/server/tests/python/vendor_pkg_tests/BUILD
+++ b/src/workerd/server/tests/python/vendor_pkg_tests/BUILD
@@ -12,3 +12,11 @@ vendored_py_wd_test(
 )
 
 # vendored_py_wd_test("scipy")
+
+vendored_py_wd_test(
+    "shapely",
+    feature_flags = ["python_dedicated_snapshot"],
+    make_snapshot = True,
+    python_flags = ["0.28.2"],
+    use_snapshot = "baseline",
+)
