--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -65,10 +65,12 @@ http_file(
 # downstream build.
 bazel_dep(name = "boringssl", version = "0.20251002.0", repo_name = "ssl")
 
-include("//build/deps:deps.MODULE.bazel")
+include("//build/deps:cpp.MODULE.bazel")
 
 include("//build/deps:nodejs.MODULE.bazel")
 
 include("//build/deps:python.MODULE.bazel")
+
+include("//build/deps:rust.MODULE.bazel")
 
 include("//build/deps:v8.MODULE.bazel")
