--- a/src/node/BUILD.bazel
+++ b/src/node/BUILD.bazel
@@ -3,7 +3,7 @@ load("@workerd//:build/wd_ts_bundle.bzl", "wd_ts_bundle")
 wd_ts_bundle(
     name = "node",
     eslintrc_json = "eslint.config.mjs",
-    gen_compile_cache = True,
+    gen_compile_cache = False,  # cannot generate compile cache while in "snapshot" mode
     import_name = "node",
     internal_modules = glob([
         "internal/*.ts",
