Update Headers implementation

--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -22,6 +22,7 @@ filegroup(
         "filesystem.c++",
         "form-data.c++",
         "global-scope.c++",
+        "headers.c++",
         "hibernatable-web-socket.c++",
         "http.c++",
         "messagechannel.c++",
@@ -68,6 +69,7 @@ filegroup(
         "filesystem.h",
         "form-data.h",
         "global-scope.h",
+        "headers.h",
         "hibernatable-web-socket.h",
         "http.h",
         "messagechannel.h",
