Try doing via config

--- a/src/cloudflare/tsconfig.json
+++ b/src/cloudflare/tsconfig.json
@@ -6,5 +6,6 @@
       "cloudflare:*": ["./*"],
       "cloudflare-internal:*": ["./internal/*"]
     }
-  }
+  },
+  "include": ["**/*", "../../types/defines/d1.d.ts"]
 }
