--- a/src/cloudflare/internal/test/images/BUILD.bazel
+++ b/src/cloudflare/internal/test/images/BUILD.bazel
@@ -2,6 +2,5 @@ load("//:build/wd_test.bzl", "wd_test")
 
 wd_test(
     src = "images-api-test.wd-test",
-    args = ["--experimental"],
-    data = glob(["*.js"]) + ["//src/cloudflare/internal/test:instrumentation-test-helper.js"],
+    data = glob(["*.js"]),
 )
