Improve spans for cache
Reworks how we're generating and annotating cache spans

Removes cache_control.expiration, cache_control.cacheability in favor of using the Cache-Control header value directly

New attributes:

cache.request.ignore_method
cache.request.url
cache.request.method
cache.request.header.range
cache.request.header.if_modified_since
cache.request.header.if_none_match
cache.response.status_code
cache.response.body.size
cache.response.cache_status
cache.response.success

cache.request.url
cache.request.method
cache.request.payload.status_code
cache.request.payload.header.cache_control
cache.request.payload.header.cache_tag
cache.request.payload.header.etag
cache.request.payload.header.expires
cache.request.payload.header.last_modified
cache.request.payload.size
cache.response.success

cache.request.ignore_method
cache.request.url
cache.response.status_code
cache.response.success

--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -699,6 +699,17 @@ wd_test(
 )
 
 wd_test(
+    src = "cache-test.wd-test",
+    args = ["--experimental"],
+    data = [
+        "cache-instrumentation-test.js",
+        "cache-mock.js",
+        "cache-operations-test.js",
+        "tests/instrumentation-tail-worker.js",
+    ],
+)
+
+wd_test(
     src = "kv-test.wd-test",
     args = ["--experimental"],
     data = [
