--- a/src/workerd/tools/BUILD.bazel
+++ b/src/workerd/tools/BUILD.bazel
@@ -25,6 +25,8 @@ cc_ast_dump(
         "//src/workerd/api:memory-cache",
         "//src/workerd/api:r2",
         "//src/workerd/api:tracing-module",
+        "//src/workerd/api:urlpattern",
+        "//src/workerd/api:urlpattern-standard",
         "//src/workerd/api/node",
         "//src/workerd/io",
         "//src/workerd/jsg",
