--- a/src/workerd/io/BUILD.bazel
+++ b/src/workerd/io/BUILD.bazel
@@ -126,6 +126,7 @@ wd_cc_library(
         "//src/workerd/util:ring-buffer",
         "//src/workerd/util:small-set",
         "//src/workerd/util:sqlite",
+        "//src/workerd/util:strong-bool",
         "@capnp-cpp//src/capnp:capnp-rpc",
         "@capnp-cpp//src/capnp/compat:http-over-capnp",
         "@capnp-cpp//src/kj:kj-async",
@@ -149,6 +150,7 @@ wd_cc_library(
         "//src/pyodide:python-entrypoint",
         "//src/workerd/api:rtti",
         "//src/workerd/jsg",
+        "//src/workerd/util:strong-bool",
     ],
 )
 
