[build] Fix macOS-cross build
This is needed since we don't have an x64 macOS clang-tidy binary, we should
only fetch that when we actually use it. Also add "manual" tags for other
binaries so we only fetch them when needed.

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -32,6 +32,7 @@ alias(
 alias(
     name = "format",
     actual = "//build/deps/formatters:format",
+    tags = ["manual"],
 )
 
 npm_link_all_packages(name = "node_modules")
