Minor improvements to MimeType
Make the constants constexpr, eliminate a couple of
double allocations in parse, and add a couple of
utility functions for common uses to eliminate
extrane allocations.

--- a/src/workerd/util/BUILD.bazel
+++ b/src/workerd/util/BUILD.bazel
@@ -100,6 +100,7 @@ wd_cc_library(
     ],
     visibility = ["//visibility:public"],
     deps = [
+        ":strings",
         "//src/workerd/jsg:memory-tracker",
         "@capnp-cpp//src/kj",
         "@capnp-cpp//src/kj:kj-async",
