--- a/src/workerd/jsg/BUILD.bazel
+++ b/src/workerd/jsg/BUILD.bazel
@@ -124,6 +124,7 @@ wd_cc_library(
         ":modules_capnp",
         ":observer",
         ":url",
+        "//src/rust/kj",
         "//src/workerd/util",  # Required for util/batch-queue.h
         "//src/workerd/util:autogate",
         "//src/workerd/util:sentry",
