--- a/src/workerd/jsg/BUILD.bazel
+++ b/src/workerd/jsg/BUILD.bazel
@@ -111,6 +111,7 @@ wd_cc_library(
     # Some JSG headers can't be compiled on their own
     features = ["-parse_headers"],
     implementation_deps = [
+        "//src/workerd/util:entropy",
         "@simdutf",
         "@ssl",
     ],
