--- a/deps/rust/crates/BUILD.icu_normalizer-2.1.1.bazel
+++ b/deps/rust/crates/BUILD.icu_normalizer-2.1.1.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "syn",
+    name = "icu_normalizer",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,17 +29,7 @@ rust_library(
         ],
     ),
     crate_features = [
-        "clone-impls",
-        "default",
-        "derive",
-        "extra-traits",
-        "fold",
-        "full",
-        "parsing",
-        "printing",
-        "proc-macro",
-        "visit",
-        "visit-mut",
+        "compiled_data",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
@@ -48,15 +38,17 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=syn",
+        "crate-name=icu_normalizer",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "2.0.108",
+    version = "2.1.1",
     deps = [
-        "@crates_vendor__proc-macro2-1.0.103//:proc_macro2",
-        "@crates_vendor__quote-1.0.41//:quote",
-        "@crates_vendor__unicode-ident-1.0.22//:unicode_ident",
+        "@crates_vendor__icu_collections-2.1.1//:icu_collections",
+        "@crates_vendor__icu_normalizer_data-2.1.1//:icu_normalizer_data",
+        "@crates_vendor__icu_provider-2.1.1//:icu_provider",
+        "@crates_vendor__smallvec-1.15.1//:smallvec",
+        "@crates_vendor__zerovec-0.11.5//:zerovec",
     ],
 )
