--- a/deps/rust/crates/BUILD.bstr-1.12.1.bazel
+++ b/deps/rust/crates/BUILD.bstr-1.12.1.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "syn",
+    name = "bstr",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,17 +29,10 @@ rust_library(
         ],
     ),
     crate_features = [
-        "clone-impls",
+        "alloc",
         "default",
-        "derive",
-        "extra-traits",
-        "fold",
-        "full",
-        "parsing",
-        "printing",
-        "proc-macro",
-        "visit",
-        "visit-mut",
+        "std",
+        "unicode",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
@@ -48,15 +41,14 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=syn",
+        "crate-name=bstr",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "2.0.108",
+    version = "1.12.1",
     deps = [
-        "@crates_vendor__proc-macro2-1.0.103//:proc_macro2",
-        "@crates_vendor__quote-1.0.41//:quote",
-        "@crates_vendor__unicode-ident-1.0.22//:unicode_ident",
+        "@crates_vendor__memchr-2.7.6//:memchr",
+        "@crates_vendor__regex-automata-0.4.13//:regex_automata",
     ],
 )
