--- a/deps/rust/crates/BUILD.capnpc-0.23.2.bazel
+++ b/deps/rust/crates/BUILD.capnpc-0.23.2.bazel
@@ -6,13 +6,16 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
-load("@rules_rust//rust:defs.bzl", "rust_library")
+load(
+    "@rules_rust//rust:defs.bzl",
+    "rust_binary",
+    "rust_library",
+)
 
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "proc_macro2",
+    name = "capnpc",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,11 +32,6 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "default",
-        "proc-macro",
-        "span-locations",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -41,20 +39,19 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=proc-macro2",
+        "crate-name=capnpc",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.103",
+    version = "0.23.2",
     deps = [
-        "@crates_vendor__proc-macro2-1.0.103//:build_script_build",
-        "@crates_vendor__unicode-ident-1.0.22//:unicode_ident",
+        "@crates_vendor__capnp-0.23.0//:capnp",
     ],
 )
 
-cargo_build_script(
-    name = "_bs",
+rust_binary(
+    name = "capnpc-rust__bin",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -64,7 +61,6 @@ cargo_build_script(
         allow_empty = True,
         exclude = [
             "**/* *",
-            "**/*.rs",
             ".tmp_git_root/**/*",
             "BUILD",
             "BUILD.bazel",
@@ -72,14 +68,32 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "default",
-        "proc-macro",
-        "span-locations",
+    crate_root = "src/capnpc-rust.rs",
+    edition = "2021",
+    rustc_flags = [
+        "--cap-lints=allow",
     ],
-    crate_name = "build_script_build",
-    crate_root = "build.rs",
-    data = glob(
+    tags = [
+        "cargo-bazel",
+        "crate-name=capnpc",
+        "manual",
+        "noclippy",
+        "norustfmt",
+    ],
+    version = "0.23.2",
+    deps = [
+        ":capnpc",
+        "@crates_vendor__capnp-0.23.0//:capnp",
+    ],
+)
+
+rust_binary(
+    name = "capnpc-rust-bootstrap__bin",
+    srcs = glob(
+        include = ["**/*.rs"],
+        allow_empty = True,
+    ),
+    compile_data = glob(
         include = ["**"],
         allow_empty = True,
         exclude = [
@@ -91,24 +105,21 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_root = "src/capnpc-rust-bootstrap.rs",
     edition = "2021",
-    pkg_name = "proc-macro2",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=proc-macro2",
+        "crate-name=capnpc",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.103",
-    visibility = ["//visibility:private"],
-)
-
-alias(
-    name = "build_script_build",
-    actual = ":_bs",
-    tags = ["manual"],
+    version = "0.23.2",
+    deps = [
+        ":capnpc",
+        "@crates_vendor__capnp-0.23.0//:capnp",
+    ],
 )
