--- a/deps/rust/crates/BUILD.cc-1.2.44.bazel
+++ b/deps/rust/crates/BUILD.cc-1.2.44.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "syn",
+    name = "cc",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,34 +29,38 @@ rust_library(
         ],
     ),
     crate_features = [
-        "clone-impls",
-        "default",
-        "derive",
-        "extra-traits",
-        "fold",
-        "full",
-        "parsing",
-        "printing",
-        "proc-macro",
-        "visit",
-        "visit-mut",
+        "parallel",
     ],
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=syn",
+        "crate-name=cc",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "2.0.108",
+    version = "1.2.44",
     deps = [
-        "@crates_vendor__proc-macro2-1.0.103//:proc_macro2",
-        "@crates_vendor__quote-1.0.41//:quote",
-        "@crates_vendor__unicode-ident-1.0.22//:unicode_ident",
-    ],
+        "@crates_vendor__find-msvc-tools-0.1.4//:find_msvc_tools",
+        "@crates_vendor__jobserver-0.1.34//:jobserver",
+        "@crates_vendor__shlex-1.3.0//:shlex",
+    ] + select({
+        "@rules_rust//rust/platform:aarch64-apple-darwin": [
+            "@crates_vendor__libc-0.2.177//:libc",  # aarch64-apple-darwin
+        ],
+        "@rules_rust//rust/platform:aarch64-unknown-linux-gnu": [
+            "@crates_vendor__libc-0.2.177//:libc",  # aarch64-unknown-linux-gnu
+        ],
+        "@rules_rust//rust/platform:x86_64-apple-darwin": [
+            "@crates_vendor__libc-0.2.177//:libc",  # x86_64-apple-darwin
+        ],
+        "@rules_rust//rust/platform:x86_64-unknown-linux-gnu": [
+            "@crates_vendor__libc-0.2.177//:libc",  # x86_64-unknown-linux-gnu
+        ],
+        "//conditions:default": [],
+    }),
 )
