--- a/deps/rust/crates/BUILD.wasm-bindgen-0.2.105.bazel
+++ b/deps/rust/crates/BUILD.wasm-bindgen-0.2.105.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "proc_macro2",
+    name = "wasm_bindgen",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,27 +29,27 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "default",
-        "proc-macro",
-        "span-locations",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
+    proc_macro_deps = [
+        "@crates_vendor__wasm-bindgen-macro-0.2.105//:wasm_bindgen_macro",
+    ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=proc-macro2",
+        "crate-name=wasm-bindgen",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.103",
+    version = "0.2.105",
     deps = [
-        "@crates_vendor__proc-macro2-1.0.103//:build_script_build",
-        "@crates_vendor__unicode-ident-1.0.22//:unicode_ident",
+        "@crates_vendor__cfg-if-1.0.4//:cfg_if",
+        "@crates_vendor__once_cell-1.21.3//:once_cell",
+        "@crates_vendor__wasm-bindgen-0.2.105//:build_script_build",
+        "@crates_vendor__wasm-bindgen-shared-0.2.105//:wasm_bindgen_shared",
     ],
 )
 
@@ -59,6 +59,9 @@ cargo_build_script(
         include = ["**/*.rs"],
         allow_empty = True,
     ),
+    aliases = {
+        "@crates_vendor__rustversion-1.0.22//:rustversion": "rustversion_compat",
+    },
     compile_data = glob(
         include = ["**"],
         allow_empty = True,
@@ -72,11 +75,6 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "default",
-        "proc-macro",
-        "span-locations",
-    ],
     crate_name = "build_script_build",
     crate_root = "build.rs",
     data = glob(
@@ -92,18 +90,24 @@ cargo_build_script(
         ],
     ),
     edition = "2021",
-    pkg_name = "proc-macro2",
+    link_deps = [
+        "@crates_vendor__wasm-bindgen-shared-0.2.105//:wasm_bindgen_shared",
+    ],
+    pkg_name = "wasm-bindgen",
+    proc_macro_deps = [
+        "@crates_vendor__rustversion-1.0.22//:rustversion",
+    ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=proc-macro2",
+        "crate-name=wasm-bindgen",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.103",
+    version = "0.2.105",
     visibility = ["//visibility:private"],
 )
 
