Add Fuzzilli REPRL integration for fuzzing support
This commit adds comprehensive support for fuzzing workerd using Fuzzilli's
REPRL (Read-Eval-Print-Reset-Loop) protocol.

Key changes:
- Implement REPRL protocol handler in workerd server with --stdin-reprl flag
- Add fuzzilli() JavaScript API for crash testing and coverage tracking
- Integrate libreprl C library for REPRL client communication
- Add KJ-based test framework integration (test-reprl.c++)
- Create example Fuzzilli configurations and mock services
- Add immediate-crash.h utility for controlled crash testing
- Fix V8 ASAN macro redefinition warnings by adding V8_USE_ADDRESS_SANITIZER
- Update .bazelrc to use clang-19 directly instead of ccache wrapper

The implementation allows Fuzzilli to:
- Execute JavaScript code in isolated REPRL sessions
- Collect sanitizer coverage feedback
- Detect crashes and memory errors
- Reset worker state between executions

Example usage:
  bazel test --config=fuzzilli //src/workerd/tests:test-reprl
  ./workerd test fuzzilli/config.capnp --experimental --stdin-reprl

--- a/src/workerd/tests/BUILD.bazel
+++ b/src/workerd/tests/BUILD.bazel
@@ -1,5 +1,6 @@
 load("//:build/kj_test.bzl", "kj_test")
 load("//:build/wd_cc_benchmark.bzl", "wd_cc_benchmark")
+load("//:build/wd_cc_binary.bzl", "wd_cc_binary")
 load("//:build/wd_cc_library.bzl", "wd_cc_library")
 load("//:build/wd_test.bzl", "wd_test")
 
@@ -136,4 +137,30 @@ filegroup(
         ":bench-util",
     ],
     visibility = ["//visibility:public"],
+)
+
+# REPRL tests using KJ test framework
+wd_cc_library(
+    name = "libreprl",
+    srcs = ["libreprl/libreprl.c"],
+    hdrs = ["libreprl/libreprl.h"],
+    copts = [
+        "-Ilibreprl",
+        "-std=c23",
+    ],
+    includes = ["libreprl"],
+)
+
+kj_test(
+    src = "test-reprl.c++",
+    data = [
+        "//fuzzilli:config.capnp",
+        "//fuzzilli:worker.js",
+        "//src/workerd/server:workerd",
+    ],
+    tags = ["requires-fuzzilli"],
+    deps = [
+        ":libreprl",
+        "@bazel_tools//tools/cpp/runfiles",
+    ],
 )
