--- a/.bazelrc
+++ b/.bazelrc
@@ -1,8 +1,8 @@
 common --enable_platform_specific_config
 build --verbose_failures
 build --build_tag_filters=-off-by-default
-test --test_tag_filters=-off-by-default
-test:asan --test_tag_filters=-off-by-default,-no-asan
+test --test_tag_filters=-off-by-default,-requires-fuzzilli
+test:asan --test_tag_filters=-off-by-default,-no-asan,-requires-fuzzilli
 # exclude enormous tests by default
 build --test_size_filters=-enormous
 
@@ -187,7 +187,21 @@ build:asan --copt="-fsanitize=address" --linkopt="-fsanitize=address"
 build:asan --test_env=ASAN_OPTIONS=abort_on_error=true
 build:asan --test_env=KJ_CLEAN_SHUTDOWN=1
 # Enable ASan, LSan support in V8
+build:asan --copt="-DV8_USE_ADDRESS_SANITIZER"
 build:asan --per_file_copt='external/v8@-DADDRESS_SANITIZER,-DLEAK_SANITIZER'
+
+# fuzzilli (https://github.com/googleprojectzero/fuzzilli/)
+build:fuzzilli --config=asan
+build:fuzzilli --copt="-DWORKERD_FUZZILLI"
+build:fuzzilli --linkopt="-DWORKERD_FUZZILLI"
+build:fuzzilli --copt="-fsanitize-coverage=trace-pc-guard"
+build:fuzzilli --linkopt="-fsanitize-coverage=trace-pc-guard"
+build:fuzzilli --linkopt="-static-libasan"
+# Set ASan/UBSan options globally to abort on error (raise SIGABRT) for proper Fuzzilli crash detection
+build:fuzzilli --action_env=ASAN_OPTIONS=abort_on_error=1:symbolize=false
+build:fuzzilli --action_env=UBSAN_OPTIONS=abort_on_error=1:symbolize=false
+# Override test filters to include requires-fuzzilli tests (inherits asan's -no-asan filter)
+test:fuzzilli --test_tag_filters=-off-by-default
 
 #
 # Linux and macOS
