--- a/src/workerd/util/BUILD.bazel
+++ b/src/workerd/util/BUILD.bazel
@@ -262,6 +262,12 @@ wd_cc_library(
 )
 
 wd_cc_library(
+    name = "immediate-crash",
+    hdrs = ["immediate-crash.h"],
+    visibility = ["//visibility:public"],
+)
+
+wd_cc_library(
     name = "websocket-error-handler",
     srcs = ["websocket-error-handler.c++"],
     hdrs = ["websocket-error-handler.h"],
